--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissor</title>
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" src="style.css">
 </head>
 <body>
+    <h1>Rock, Paper, Scissors!</h1>
+    <div class="container" >
+        <button id="rpc" class="button">Rock</button>
+        <button id="rpc" class="button">Paper</button>
+        <button id="rpc" class="button">Scissors</button>
+    </div>
+    
+    <div class="results"></div>
+    <div class="score"></div>
+    <button id="restart">Restart</button>
     <script src="script.js"></script>
 </body>
 </html>
