--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" src="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rock, Paper, Scissors!</h1>
-    <div class="container" >
-        <button id="rpc" class="button">Rock</button>
-        <button id="rpc" class="button">Paper</button>
-        <button id="rpc" class="button">Scissors</button>
+    <div class="container">
+        <h1>Rock Paper Scissors</h1>
+        <p class="win-para"> First to 5 wins! </p>
+        <div class="button-container" >
+            <button id="rpc" class="rock-button"><img src="images/stone.png" alt="stone"></button>
+            <button id="rpc" class="paper-button"><img src="images/paper.png" alt="paper"></button>
+            <button id="rpc" class="scissors-button"><img src="images/scissors.png" alt="scissors"></button>
+        </div>
+        <div class="score-container">
+            <div class="player-score">Player score: 0 </div>
+            <div class="computer-score">Computer score: 0 </div>
+            <div class="results"></div>
+            <div class="restart"></div>
+        </div>
     </div>
-    
-    <div class="results"></div>
-    <div class="score"></div>
-    <button id="restart">Restart</button>
-    <script src="script.js"></script>
+
+<script src="script.js"></script>
+
 </body>
 </html>
