--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="container">
         <h1>Rock Paper Scissors</h1>
-        <p class="win-para"> First to 5 wins! </p>
+        <p class="win-para"> Round of 5</p>
         <div class="button-container" >
             <button id="rpc" class="rock-button"><img src="images/stone.png" alt="stone"></button>
             <button id="rpc" class="paper-button"><img src="images/paper.png" alt="paper"></button>
             <button id="rpc" class="scissors-button"><img src="images/scissors.png" alt="scissors"></button>
         </div>
         <div class="score-container">
-            <div class="player-score">Player score: 0 </div>
-            <div class="computer-score">Computer score: 0 </div>
+            <p class="player-score">Player score: 0</p>
+            <p class="computer-score">Computer score: 0</p>
         </div> 
     </div>
 
